[package]
name = "lorikeet"
version = "0.11.2"
authors = ["cetra3 <cetra3@hotmail.com>"]
license = "MIT/Apache-2.0"
description = "a parallel test runner for devops"
repository = "https://github.com/cetra3/lorikeet"
readme = "README.md"
edition = "2018"

[dependencies]
petgraph = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
linked-hash-map = { version = "0.5.2", features = ["serde_impl"] }
tera = "1.2.0"
structopt = "0.3.13"
log = "0.4.8"
colored = "1.9.3"
atty = "0.2.14"
regex = "1.3.7"
env_logger = "0.7.1"
reqwest = {version = "0.10.4", features = ["json", "stream"] }
chrono = { version = "0.4.11", features = ["serde"] }
lazy_static = "1.4.0"
chashmap = "2.2.2"
hostname = "0.3.1"
sys-info = "0.6.0"
openssl-probe = "0.1.2"
jmespath = "0.2.0"
anyhow = "1.0.28"
serde_json = "=1.0.44" #Fix for jmespath
quick-xml = "0.18.1"
cookie = "0.13.3"
tokio = {version = "0.2", features = ["full"]}
tokio-util = {version = "0.3", features= ["codec"]}