[package]
name = "lorikeet"
version = "0.13.1"
authors = ["cetra3 <cetra3@hotmail.com>"]
license = "MIT/Apache-2.0"
description = "a parallel test runner for devops"
repository = "https://github.com/cetra3/lorikeet"
readme = "README.md"
edition = "2018"

[dependencies]
petgraph = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.16"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
tera = "1.6.1"
structopt = "0.3.21"
log = "0.4.14"
colored = "2.0.0"
atty = "0.2.14"
regex = "1.4.3"
env_logger = "0.8.2"
reqwest = {version = "0.11.0", features = ["json", "stream", "multipart"] }
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
chashmap = "2.2.2"
hostname = "0.3.1"
sys-info = "0.8.0"
openssl-probe = "0.1.2"
jmespatch = "0.3.0"
anyhow = "1.0.38"
serde_json = "1.0"
quick-xml = "0.21.0"
cookie = "0.14.3"
tokio = {version = "1.0", features = ["full"]}
tokio-util = {version = "0.6", features= ["codec"]}
libc = "0.2.86"
futures = "0.3.15"
